<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorModalActivity">

    <TextView
        android:id="@+id/tv_Judul_CalcModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/silahkan_masukkan_data_kalkulator_modal"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Judul_CalcModal">

        <TextView
            android:id="@+id/tv_Silahkan_Masukkan_Jenis_Bibit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/silahkan_masukkan_jenis_peralatan_tambahan" />

        <Spinner
            android:id="@+id/spinner_jenis_peralatan_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:layout_marginBottom="35dp"
            android:hint="@string/silahkan_pilih_jenis_bibit_tanaman"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_JumlahPupuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/biaya_pupuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_jumlah_pupuk_yang_dibutuhkan_kg"
            android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_calcModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/submit_calc_pupuk" />


    <TextView
        android:id="@+id/tvOutput_modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Total Biaya :"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>